# skijump3-remake

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
assets/: CONFIG.SKI  HISCORE.SKI
common/: Cargo.toml
common/src/: graph.rs  help.rs  info.rs  lang.rs  lib.rs  list.rs  lumi.rs  maki.rs  pcx.rs  platform.rs  regfree.rs  rs_util.rs  sj3.rs  table.rs  tuuli.rs  unit.rs
desktop/: Cargo.toml
desktop/src/: main.rs  sdlport.rs
pack/: Cargo.toml
pack/src/: main.rs
src/: graph.rs  help.rs  info.rs  lang.rs  list.rs  lumi.rs  main.rs  maki.rs  pcx.rs  platform.rs  rs_util.rs  sdlport.rs  sj3.rs  table.rs  trace.rs  tuuli.rs  unit.rs
web/: Cargo.toml  build.sh  index.html  index.js  setImmediate.js
web/src/: lib.rs  webport.rs
